--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.github.xiaogegechen.library.ColorTextView
@@ -14,13 +15,28 @@
         app:text="98"
         app:text_size="100sp"/>
     <com.github.xiaogegechen.library.CornerButton
+        android:id="@+id/share_button"
         android:layout_marginLeft="20dp"
         android:layout_width="100dp"
         android:layout_height="40dp"
         app:corner_button_icon="@drawable/qq"
-        app:corner_button_border_width="4dp"
         app:corner_button_border_color="#000000"
-        app:corner_button_distance="8dp"
+        app:corner_button_distance="1dp"
         app:corner_button_text_size="20sp"
         app:corner_button_text="分享"/>
+    <com.github.xiaogegechen.library.CornerButton
+        android:layout_marginTop="10dp"
+        android:padding="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        app:corner_button_icon="@drawable/change"
+        app:corner_button_start_color="#00000000"
+        app:corner_button_end_color="#00000000"
+        app:corner_button_text_color="#e7e8ea"
+        app:corner_button_border_color="#e7e8ea"
+        app:corner_button_border_width="2dp"
+        app:corner_button_distance="1dp"
+        app:corner_button_text_size="20sp"
+        app:corner_button_text="白羊座"/>
 </LinearLayout>
