--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:start_color="@color/color_text_view_start_color"
         app:end_color="@color/color_text_view_end_color"
         app:text="98"
@@ -18,9 +19,10 @@
         app:text_gravity="center"/>
     <com.github.xiaogegechen.library.CornerButton
         android:id="@+id/share_button"
-        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/color_text_view"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:corner_button_icon="@drawable/qq"
         app:corner_button_border_color="#000000"
         app:corner_button_distance="1dp"
@@ -29,36 +31,35 @@
         app:corner_button_padding_bottom="40dp"
         android:padding="30dp"
         app:corner_button_text="分享"/>
-<!--    <com.github.xiaogegechen.library.CornerButton-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:padding="2dp"-->
-<!--        android:layout_marginLeft="20dp"-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        app:corner_button_icon="@drawable/qq"-->
-<!--        app:corner_button_start_color="#00000000"-->
-<!--        app:corner_button_end_color="#00000000"-->
-<!--        app:corner_button_text_color="#e7e8ea"-->
-<!--        app:corner_button_border_color="#e7e8ea"-->
-<!--        app:corner_button_border_width="2dp"-->
-<!--        app:corner_button_distance="1dp"-->
-<!--        app:corner_button_text_size="20sp"-->
-<!--        app:corner_button_text="白羊座"/>-->
-    <Button
-        android:id="@+id/button"
-        android:text="hello"
-        android:paddingLeft="10dp"
-        android:paddingTop="0dp"
-        android:paddingBottom="10dp"
+    <com.github.xiaogegechen.library.CornerButton
+        android:id="@+id/cons_button"
         android:layout_width="100dp"
-        android:layout_height="50dp"/>
-    <TextView
-        android:text="hello"
-        android:gravity="left|center_vertical"
-        android:paddingRight="30dp"
-        android:paddingLeft="20dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:padding="2dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toTopOf="@id/share_button"
+        app:layout_constraintBottom_toBottomOf="@id/share_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:corner_button_icon="@drawable/qq"
+        app:corner_button_start_color="#00000000"
+        app:corner_button_end_color="#00000000"
+        app:corner_button_text_color="#e7e8ea"
+        app:corner_button_border_color="#e7e8ea"
+        app:corner_button_border_width="2dp"
+        app:corner_button_distance="1dp"
+        app:corner_button_text_size="20sp"
+        app:corner_button_text="白羊座"/>
+    <com.github.xiaogegechen.library.MenuView
+        android:id="@+id/menu_view"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:menu_view_orientation="horizontal"
+        app:menu_view_animation_duration="100"
+        app:menu_view_reverse="true"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
